<resources>
    <string name="app_name">OhMyPet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="str_test">Test</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="adopt_list">분양 목록</string>
    <string name="adopt_post">분양 등록</string>
    <string name="adopt_detail">분양 정보</string>
    <string name="adopt_schedule">분양 일정 관리</string>
    <string name="title_activity_adopt_post">AdoptPostActivity</string>

    <!-- Button -->
    <string name="choose">이미지 선택</string>

    <!-- 분양 등록 -->
    <string name="picture">사진</string>
    <string name="title">제목</string>
    <string name="kind">품종</string>
    <string name="price">금액</string>
    <string name="age">나이 (생후)</string>
    <string name="description">설명</string>
    <string name="remarks">특이사항</string>
    <string name="user">분양자</string>
    <string name="schedule">분양 일정</string>
    <string name="position">분양 위치</string>
    <string name="register">등록하기</string>
    <string name="title_activity_login">가입하기</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
