<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_post"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingBottom="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:orientation="vertical"
                tools:context=".activity.AdoptPostActivity">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/picture"
                        android:id="@+id/adopt_post_picture_" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/choose"
                            android:id="@+id/adopt_post_register_image"/>
                        <ViewFlipper
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="150dp"
                            android:id="@+id/adopt_post_image_view" >
                            <ImageView android:id="@+id/imageView1" android:scaleType="matrix"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content" android:layout_height="wrap_content" />
                            <ImageView android:id="@+id/imageView2" android:scaleType="matrix"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content" android:layout_height="wrap_content" />
                            <ImageView android:id="@+id/imageView3" android:scaleType="matrix"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content" android:layout_height="wrap_content" />
                        </ViewFlipper>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/title"
                        android:id="@+id/adopt_post_title_" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/adopt_post_title"
                        android:layout_weight="1"
                        android:elegantTextHeight="false"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/price"
                        android:id="@+id/adopt_post_price_" />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/adopt_post_price"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:numeric="integer"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_gravity="right"
                        android:text="원"
                        android:id="@+id/adopt_post_price_won" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/description"
                        android:id="@+id/adopt_post_desc_" />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/adopt_post_desc"
                        android:layout_weight="1"
                        android:inputType="textMultiLine"
                        android:gravity="top"/>
                </LinearLayout>
                <LinearLayout  android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tv_result"
                        android:minHeight="100dp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        >
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_adopt_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="bottom|end"
            android:src="@android:drawable/ic_menu_save"
            android:tint="#FFFFFF"
            />
    </LinearLayout>

</RelativeLayout>